--- a/Step05_Boolean.html
+++ b/Step05_Boolean.html
@@ -6,6 +6,24 @@
     <title>Step05_Boolean.html</title>
 </head>
 <body>
-    
+    <script>
+        /*
+           [ Boolean type ]
+            -true, false를 직접 작성하거나
+            비교연산 (>)혹은 논리연산의 결과로 만들어진다.
+
+            -참, 거짓을 나타내는 datatype
+            -Boolean type의 변수명은 보통 대화식으로 지어줌
+        */
+       var isRun = true;
+       var isWait = false;
+       var isSmaller = 10 < 5;
+       var isEqual = 10 == 10;
+       var isDifferent = 10 != 15;
+
+       if(isEqual){
+        alert('같아요!');
+       }
+    </script>
 </body>
 </html>
