--- a/function_practice.html
+++ b/function_practice.html
@@ -40,9 +40,30 @@
 
         4. += 사용
     */
+    var btn_plus_1 = document.getElementById('btn_plus_1');
+    var num_plus_1 = parseInt(btn_plus_1.innerText);
+    
+    var btn_plus_2 = document.getElementById('btn_plus_2');
+    var num_plus_2 = parseInt(btn_plus_2.innerText);
+    
+    var btn_plus_3 = document.getElementById('btn_plus_3');
+    var num_plus_3 = parseInt(btn_plus_3.innerText);
+
+
 
     btn_plus_1.addEventListener('click', function(){
-    })
+        btn_plus_1.innerText = num_plus_1;
+        num_plus_1 += 1;
+        num_plus_1 -= 1;
+    });
+    btn_plus_2.addEventListener('click', function(){
+        btn_plus_2.innerText = num_plus_2;
+        num_plus_2 += 2;
+    });
+    btn_plus_3.addEventListener('click', function(){
+        btn_plus_3.innerText = num_plus_3;
+        num_plus_3 += 3;
+    });
 
 
 
